# screen-aware

./: .env.example  .gitignore  README.md  mcp.config.example.json  pyproject.toml
.agents/plugins/: marketplace.json
companion/: index.html  package-lock.json  package.json  vite.config.ts
companion/scripts/: tauri-dev.mjs
companion/src/: App.tsx  api.ts  capture.ts  styles.css  types.ts
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  MCP_CLIENT_SETUP.md  TECH_STACK.md  TEST_PROJECT_PROMPTS.md  USE_CASE_EXAMPLES.md  WORKING.md
plugins/screen-aware/: .mcp.json
plugins/screen-aware/.codex-plugin/: plugin.json
plugins/screen-aware/skills/screen-aware/: SKILL.md
scripts/: start-backend.ps1  start-mcp.ps1
src/screen_aware/: __init__.py  api.py  config.py  event_store.py  formatters.py  live_assistant.py  mcp_server.py  videodb_service.py
tests/: test_event_store.py  test_formatters.py  test_live_assistant.py  test_mcp_server.py  test_videodb_service.py
