[project]
name = "screen-aware"
version = "0.1.0"
description = "Screen-Aware Copilot backend and MCP server powered by VideoDB CaptureSession."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "videodb[capture]>=0.4.5",
  "imageio-ffmpeg>=0.5.1",
  "mcp>=1.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
screen-aware-api = "screen_aware.api:main"
screen-aware-mcp = "screen_aware.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screen_aware"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
