[package]
name = "screen-aware-companion"
version = "0.1.0"
description = "Tauri companion for Screen-Aware Copilot"
authors = ["Screen-Aware"]
edition = "2021"

[lib]
name = "screen_aware_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
